bg (payment history): fix the layout due to broken CSS selectors
Some selectors have been deleted when resolving merge conflict

[#165416819]

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -178,6 +178,11 @@ footer {
    /*margin-top: 15px;*/
 }
 
+#footer-color {
+   background-color: #7451eb;
+   color: #fff;
+}
+
 /* -------------------------------
             Application
 ---------------------------------*/
@@ -587,6 +592,64 @@ input {
 }
 
 /*----------------------------------------
+       Loan Repayment history
+-----------------------------------------*/
+#loan_history {
+   display: flex;
+   justify-content: space-between;
+}
+
+#loanSummary {
+   width: 30%;
+   margin-right: 5px;
+}
+
+.init_summary {
+   display: flex;
+   justify-content: space-between;
+
+
+   margin-bottom: 15px;
+}
+
+.last_summary {
+   display: flex;
+   flex-direction: column;
+}
+
+.last_summary div {
+   margin-bottom: 15px;
+}
+
+.loan_history_details div {
+   box-sizing: border-box;
+
+}
+
+.flex-table {
+   display: flex;
+   flex-flow: row wrap;
+   justify-content: space-between;
+   border-left: solid 1px #d9d9d9;
+   transition: 0.5s;
+   /*&:first-of-type {
+    border-top: solid 1px #1565C0;
+    border-left: solid 1px #1565C0;
+}*/
+
+}
+
+/*.table-container {
+  display: block;
+  margin: 2em auto;
+  width: 100%;
+  /*max-width: 600px;
+}*/
+table {
+   width: 500px;
+}
+
+/*----------------------------------------
             Media query
 -----------------------------------------*/
 @media only screen and (min-width: 200px) and (max-width: 640px) {
@@ -608,18 +671,4 @@ input {
    
       height: 550px;
    }
-
-   /* Style the hamburger menu */
-   #hamburger {
-      /*background: black;*/
-      display: block;
-      position: absolute;
-      right: 0;
-      top: 0;
-   }
-
-   #navLinks { 
-      display: none;
-   }
-
 }
